--- a/App/App.csproj
+++ b/App/App.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.7" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.7" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Open.ChannelExtensions" Version="3.5.0" />
   </ItemGroup>
 
   <ItemGroup>
